# MeterServepAppProject

./: .gitignore  CMakeLists.txt  Makefile  build.sh  clean.sh  constantTesting.sh  meter_app.c  meter_srv.c  metering_hw.c  runApp.sh  runHwServer.sh  runServer.sh  runTests.sh  serverStart.c  workspace.code-workspace
ApplicationExample/: CMakeLists.txt  main.c
ApplicationStart/: CMakeLists.txt  meter_app.c
CommonUtils/: CMakeLists.txt
CommonUtils/ErrorHandling/: CMakeLists.txt
CommonUtils/FileUtils/: CMakeLists.txt  fileUtils.c  fileUtils.h
CommonUtils/MessageSize/: CMakeLists.txt  messageSize.c  messageSize.h
CommonUtils/MessagingUtils/: CMakeLists.txt  messagingUtils.c  messagingUtils.h
CommonUtils/QueueUtils/: CMakeLists.txt  queueUtils.c  queueUtils.h
MeterHardware/: CMakeLists.txt
MeterSimulator/: CMakeLists.txt  metering_hw.c
MeterUtils/: CMakeLists.txt  instantaneousMeterValues.c  instantaneousMeterValues.h  meterUtils.c  meterUtils.h  minMaxValues.c  minMaxValues.h
Server/: CMakeLists.txt  main.c  notificationUtils.c  notificationUtils.h  serverMessageHandlers.c  serverMessageHandlers.h  serverQueueUtils.c  serverQueueUtils.h
ServerStart/: CMakeLists.txt  serverStart.c
ServerUtils/: CMakeLists.txt  dataUtils.c  dataUtils.h  errorHandling.c  errorHandling.h  messageHandlers.c  messageUtils.c  messageUtils.h  notificationUtils.c  notificationUtils.h  queueUtils.c  queueUtils.h  serverUtils.c  serverUtils.h
Tests/: CMakeLists.txt
Tests/Functional/: CMakeLists.txt
Tests/Functional/getSingle/: CMakeLists.txt  getSingleTest.c
Tests/Functional/resetRequest/: CMakeLists.txt  resetRequestTest.c
Tests/Functional/setSingle/: CMakeLists.txt  setSingleTest.c
Tests/Functional/simpleGet/: CMakeLists.txt  simpleGetTest.c
Tests/Functional/subscribeNotification/: CMakeLists.txt  subscribeNotificationTest.c
Tests/Functional/subscribeRequest/: CMakeLists.txt  subscribeRequestTest.c
Tests/Functional/testUtils/: CMakeLists.txt  testUtils.c  testUtils.h
Tests/Unit/: CMakeLists.txt  serverUtils.cpp
commonIncludes/: projectGenerals.h  protocol.h  serverMessages.h
includes/: meter_srv.h  metering_interface.h  serverMessages.h
raw/: README.txt  metering_interface.h
test/: CMakeLists.txt  serverUtils.cpp  test_test.cpp
